[package]
name = "kill-the-keep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
legion = "0.4.0"
macroquad = "0.3.15"
rand = "0.8.5"
rusqlite = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
